fixed spacing for the hr and the email field on the contact page

--- a/src/pages/contact/index.module.css
+++ b/src/pages/contact/index.module.css
@@ -67,7 +67,21 @@ hr{
     margin: 10px;
 }
 
+.pr{
+    padding-right: 2em;;
+}
+
 @media (max-width: 1000px) {
+    .pr{
+        padding: 0;
+    }
+    #left, #right, #form-line-1 div{
+        margin: 0;
+        width: 100%;
+    }
+    #form-line-1{
+        flex-direction: column;
+    }
     #section-3{
         display: block;
     }
